<resources>
    <string name="app_name">College Project</string>
    <string name="todo">TODO</string>

    <!-- Buttons -->
    <string name="conBtn">Continue</string>
    <string name="letsBtn">Let\'s Go</string>


    <!-- Login -->
    <string name="loginHead">LOGIN</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forPassword"><u>forget password?</u></string>
    <string name="no">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="hello">Hey, Welcome</string>

    <!-- Register -->
    <string name="login"><u>Login</u></string>
    <string name="qMark">\?</string>


    <!-- Students Registration form -->
    <string name="stuHead">"Go beyond the floor and find the destination."</string>
    <string name="already">Already Registered?</string>
    <string name="newReg">New Registration</string>
    <string name="are_you">Are you</string>
    <string name="student">Student</string>
    <string name="dob">Date of Birth * </string>
    <string name="select_dob">Please select D.O.B.</string>
    <string name="teacher">Teacher</string>
    <string name="personal"><u>Personal Details</u></string>
    <string name="fName">Full Name *</string>
    <string name="phone">Phone Number*</string>
    <string name="fPhone">Father\'s Phone Number*</string>
    <string name="fatherName">Father\'s Full Name*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender*</string>
    <string name="e_mail">E-mail*</string>

    <!-- Students  Academic Details -->
    <string name="ad"><u>Academic Details</u></string>
    <string name="roll">Roll Number*</string>
    <string name="academicFee">Total Academic Fee*</string>
    <string name="hostelFee">Total Hostel Fee</string>
    <string name="batch">Batch(YYYY-YYYY)*</string>
    <string name="dep">Department*</string>
    <string name="aca_year">Academic Year*</string>


    <!-- Teacher Registration form -->
    <string name="teachHead">“In learning, you will teach, and in teaching, you will learn."</string>

    <!-- Arrays for Dropdown menu -->
    <string-array name="Gender_Array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="Department_Array">
        <item>C.S.E</item>
    </string-array>

    <string-array name="Year_Array">
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>

    <string-array name="CS_Class_Array">
        <item>CS 1st Year</item>
        <item>CS 2nd Year</item>
        <item>CS 3rd Year</item>
        <item>CS 4th Year</item>
    </string-array>

    <string-array name="Teacher_Role_Array">
        <item>Head Of Department</item>
        <item>Class Co-Ordinator</item>
        <item>Lecturer</item>
    </string-array>


    <!-- Bottom Navigation Menu -->
    <string name="feed">Feed</string>
    <string name="assignment">Assignment</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>

    <!-- Fees-->
    <string name="section">Section</string>
    <string name="total">Total :</string>
    <string name="submit">Submit :</string>


    <!--Navigation Menu -->
    <string name="home">Home</string>
    <string name="attendance">Attendance</string>
    <string name="fees">Fees</string>
    <string name="progress">Progress</string>

    <!-- Teacher Drawer Menu -->
    <string name="attn">Attendance</string>
    <string name="fee">Fee</string>
    <string name="remarks">Remarks</string>
    <string name="logout">Logout</string>


    <!-- Create Password -->
    <string name="crtPass">Create Password</string>
    <string name="pass">Enter Password* </string>
    <string name="repass">Confirm Password*</string>

    <!--Department-->
    <string name="cse">CSE/IT Department</string>
    <string name="me">Mechanical Department</string>
    <string name="ee">Electrical Department</string>

    <!--year-->
    <string name="first">First Year</string>
    <string name="second">Second Year</string>
    <string name="third">Third Year</string>
    <string name="forth">Forth Year</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open" />
    <string name="close" />
    <string name="forget_password"><u> Forget Password? </u></string>


</resources>