<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title=" Developed by - Veika">
            <menu>
                <item
                    android:id="@+id/home"
                    android:title="@string/home" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="Academic">
            <menu>
                <item
                    android:id="@+id/attendence"
                    android:title="@string/attn" />
                <item
                    android:id="@+id/fee"
                    android:title="@string/fee" />
                <item
                    android:id="@+id/remark"
                    android:title="@string/remarks" />
                <item
                    android:id="@+id/progress"
                    android:title="@string/progress" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/logout">
            <menu>
                <item
                    android:id="@+id/logout"
                    android:title="@string/logout" />
            </menu>
        </item>
    </group>
</menu>