<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/newReg"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="298dp"
                android:layout_height="436dp"
                android:layout_marginStart="30dp"
                app:srcCompat="@drawable/login" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="170dp"
                android:layout_height="189dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="90dp"
                android:alpha="0.1"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/are_you"
                android:textColor="@color/midBlue"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/rgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="50dp">

                <RadioButton
                    android:id="@+id/student"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="@string/student"
                    android:textColor="@drawable/text_color"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/teacher"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/opensans_bold"
                    android:gravity="center"
                    android:text="@string/teacher"
                    android:textColor="@drawable/text_color"
                    android:textSize="15sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="260dp"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/qMark"
                android:textColor="@color/midBlue"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="290dp"
                android:layout_marginTop="375dp"
                app:srcCompat="@drawable/ic_reg" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/already"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/loginbtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login"
                android:textColor="@color/btn" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
