<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="298dp"
                android:layout_height="436dp"
                android:layout_marginStart="30dp"
                app:srcCompat="@drawable/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="96dp"
                    android:layout_height="117dp"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="25dp"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="149dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/loginHead"
                    android:textColor="#C9373C"
                    android:textSize="20dp"
                    android:textStyle="normal" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/midBlue"
                    android:ems="10"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/midBlue"
                    android:ems="10"
                    android:fontFamily="@font/opensans_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/cursor" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/forPassword"
                    android:textColor="@color/link" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="290dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_reg" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/no"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/register"
                android:textColor="#388E3C" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
