<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherRegistrationActivity"
    android:background="@drawable/login_bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/teachHead"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="19sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="308dp"
                android:layout_height="570dp"
                android:layout_marginStart="25dp"
                app:srcCompat="@drawable/login" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="195dp"
                android:alpha="0.1"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="308dp"
                android:layout_height="419dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="78dp"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="326dp"
                    android:fadeScrollbars="true"
                    android:scrollbarSize="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/pd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="75dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/opensans_bold"
                            android:text="@string/personal"
                            android:textColor="@color/bottomBlue"
                            android:textSize="20sp" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/stufullname"
                            android:layout_width="255dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:backgroundTint="@color/midBlue"
                            android:capitalize="words"
                            android:ems="10"
                            android:fontFamily="@font/opensans_regular"
                            android:hint="@string/fName"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/opensans_semibold"
                            android:text="@string/gender"
                            android:textColor="@color/midBlue"
                            android:textSize="18dp" />

                        <RadioGroup
                            android:id="@+id/gselection"
                            android:layout_width="match_parent"
                            android:layout_height="85dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/male"
                                android:layout_width="90dp"
                                android:layout_height="48dp"
                                android:background="@drawable/radio_selector"
                                android:button="@android:color/transparent"
                                android:elevation="10dp"
                                android:fontFamily="@font/opensans_regular"
                                android:gravity="center"
                                android:text="@string/male"
                                android:textColor="@drawable/text_color" />

                            <RadioButton
                                android:id="@+id/female"
                                android:layout_width="90dp"
                                android:layout_height="48dp"
                                android:layout_marginStart="45dp"
                                android:background="@drawable/radio_selector"
                                android:button="@android:color/transparent"
                                android:elevation="10dp"
                                android:fontFamily="@font/opensans_regular"
                                android:gravity="center"
                                android:text="@string/female"
                                android:textColor="@drawable/text_color" />

                        </RadioGroup>

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="255dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="15dp"
                            android:backgroundTint="@color/midBlue"
                            android:ems="10"
                            android:fontFamily="@font/opensans_regular"
                            android:hint="@string/e_mail"
                            android:inputType="textEmailAddress"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="12sp" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pphone"
                            android:layout_width="255dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="25dp"
                            android:backgroundTint="@color/midBlue"
                            android:ems="10"
                            android:fontFamily="@font/opensans_regular"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:minHeight="48dp"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="12sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/ad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="75dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/opensans_bold"
                            android:text="@string/ad"
                            android:textColor="@color/bottomBlue"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/teacherrole"
                            style="@android:style/Widget.Holo.Light.Spinner"
                            android:layout_width="255dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="15dp"
                            android:backgroundTint="@color/midBlue"
                            android:spinnerMode="dialog" />


                    </LinearLayout>
                </ScrollView>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="275dp"
                    android:layout_marginTop="55dp"
                    app:srcCompat="@drawable/ic_reg" />
            </LinearLayout>

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="160dp"
                android:layout_marginTop="530dp"
                app:srcCompat="@drawable/ic_back_arrow" />

        </FrameLayout>
    </LinearLayout>
</ScrollView>
